@@ -48,6 +48,9 @@ GNU Make porting efforts:
       Troy Runkel <Troy.Runkel@mathworks.com>
       Juan M. Guerrero <juan.guerrero@gmx.de>
 
+  Port to z/OS by:
+      Igor Todorovski <itodorov@ca.ibm.com>
+
 -----------------------------------
 Other contributors:
 
